# InverseKinematics

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  conanfile.py  main.cpp  run.sh  task.cpp
include/IK/: IK.cpp  IK.h
