cmake_minimum_required(VERSION 3.21)
project(interview)
find_package(Eigen3 REQUIRED)
find_package(Pangolin 0.4 REQUIRED)
include_directories(${Pangolin_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 14)
include_directories(${EIGEN3_INCLUDE_DIR})
add_executable(interview main.cpp)
target_link_libraries(interview pango_display pango_plot)